Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-1268

Transport receiver loading failed for axis2_tcp_receiver.dll

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.5.0
    • 1.6.0
    • transport/tcp
    • None
    • Windows XP with SP3 + Visual Studio 2005 with SP1
      OpenSUSE 11

    Description

      I tryed to use AXIS2C with TCP transport, but fail with the "Transport
      receiver loading failed for axis2_tcp_receiver.dll, unable to continue" log message. But
      it is work well with http transport.
      I done these with following step:

      ----------------------------------------------------------
      1 unpack zlib123-dll
      2
      unpack axis2c-src-1.5.0
      3 modify configure.in, change the following items
      WITH_TCP = 1

      ZLIB_BIN_DIR= C:\AXIS2C\zlib123-dll
      4 SET AXIS2C_HOME=C:\AXIS2C\axis2c-bin-1.5.0
      5 run
      build.bat
      6 move AXIS2C BINARY from deploy folder to AXIS2C_HOME
      5 add AXIS2C_HOME\lib &
      AXIS2C_HOME\bin to path
      6 uncomment
      6060
      TCP
      7 generate client code with wsdl2c
      8
      compile and run the code with visual stuido 2005

      -------------------------------------------------------------
      #include
      #include

      #include
      #include
      #include
      #include "axis2_stub_echo.h"
      #include "adb_echoInt.h"

      #include "adb_echoIntResponse.h"
      //#include "adb_echoIntResponse.h"
      axiom_node_t
      *build_om_payload_for_echo_svc(
      const axutil_env_t * env);
      int
      main(
      int argc,
      char
      **argv)

      { const axutil_env_t *env = NULL; const axis2_char_t *address = NULL; axis2_endpoint_ref_t *endpoint_ref = NULL; axis2_options_t *options = NULL; const axis2_char_t *client_home = NULL; axis2_svc_client_t *svc_client = NULL; axiom_node_t *payload = NULL; axiom_node_t *ret_node = NULL; axiom_node_t *payload2 = NULL; axiom_node_t *ret_node2 = NULL; axis2_stub_t *stub=NULL; adb_echoInt_t *echoInt = NULL; adb_echoIntResponse_t *echoIntRes = NULL; axis2_conf_t *conf=NULL; int res = 0; /* Set up the environment */ env = axutil_env_create_all("echo.log", AXIS2_LOG_LEVEL_DEBUG); conf= axis2_conf_create(env); /* Set end point reference of echo service */ address = "http://192.168.50.1:9762/services/echo"; //address = "tcp://192.168.50.1:9999/services/echo"; /* set AXIS2C_HOME */ client_home = AXIS2_GETENV("AXIS2C_HOME"); printf("Using endpoint : %s\n", address); stub = axis2_stub_create_echo(env,client_home,address); options = axis2_stub_get_options( stub, env); echoInt = adb_echoInt_create(env); adb_echoInt_set_in(echoInt,env,12345); echoIntRes = axis2_stub_op_echo_echoInt(stub,env,echoInt); res = adb_echoIntResponse_get_return(echoIntRes,env); printf("Return : %d\n", res); return 0; }

      9 Zero is returned. and Log file show :
      [Sat Sep 06 02:07:36 2008] [error]
      ..\..\src\core\deployment\conf_builder.c(1251) Transport receiver loading failed for
      axis2_tcp_receiver.dll, unable to continue
      ...
      [Sat Sep 06 02:07:36 2008] [debug]
      ..\..\src\core\phaseresolver\phase_holder.c(139) Add handler AddressingOutHandler to
      phase MessageOut
      [Sat Sep 06 02:07:36 2008] [debug]
      ..\..\src\core\clientapi\op_client.c(881) Start:axis2_op_client_infer_transport
      [Sat Sep
      06 02:07:36 2008] [debug] ..\..\src\core\clientapi\op_client.c(940)
      End:axis2_op_client_infer_transport
      [Sat Sep 06 02:07:36 2008] [error]
      ..\..\src\core\clientapi\op_client.c(436) Op client execute failed. Cannot find transport
      in.
      10 I comfirmed that the file axis2_tcp_receiver.dll is really exist in the
      AXIS2C_HOME/lib
      11 When I try this on Linux, I got the similar message.
      Any help will
      be appreciated.
      Thanks & Best Regards,
      Eddie Hsu

      -----------------------------------------------------------------------------
      my
      configure.in & axis2.xml are followed:
      true
      6060
      false
      6060
      HTTP/1.1
      TCP

          1. Build
            Details ###
      1. enables https support
        ENABLE_SSL = 0
      2. build libcurl transport
        ENABLE_LIBCURL
        = 0
      3. build axis2 with Libxml2 Parser. Axis2/C will be built with embeded guththila #
        parser by Default.
        ENABLE_LIBXML2=0
      4. build tcp server in addition to http server

      WITH_TCP = 1

      1. build with archive based deployment
        WITH_ARCHIVE = 0

          1. Dependant Binary Locations (Required) ###
      1. libxml2 binary location ( axis2c is built with libxml2 )
        LIBXML2_BIN_DIR =
        F:\applications\libxml2-2.6.30.win32

      2. iconv binary location
        ICONV_BIN_DIR =
        F:\applications\iconv-1.9.2.win32
      3. zlib binary location
        ZLIB_BIN_DIR=
        C:\AXIS2C\zlib123-dll

          1. Dependant Binary Locations (Optional) ###

      1. openssl binary location
      2. required if ENABLE_SSL = 1
        OPENSSL_BIN_DIR = c:\OpenSSL
      3. libcurl binary location, only required if libcurl transport is enabled
        LIBCURL_BIN_DIR =
        E:\libcurl-7.15.1-msvc-win32-ssl-0.9.8a-zlib-1.2.3


          1. Apache Server module (required when building Axis2/C Apache Module) ###
      1. apache binary location
        APACHE_BIN_DIR = "C:\Program Files\Apache Software
        Foundation\Apache2.2"

      2. apache 2 server family
      3. To use apache 2.2 family, use
        APACHE_VERSION_IS_2_0_X = 0
        APACHE_VERSION_2_0_X = 0

          1. Compiler Options ###
      1. C
        runtime LIBRARY OPTION ( Use /MD or /MT )
        CRUNTIME = /MD
      2. Embed Manifest Files

      EMBED_MANIFEST = 1

      1. debug symbols
      2. To build with debug symbols use DEBUG = 1

      DEBUG = 1
      #

      Attachments

        Activity

          People

            shankar Selvaratnam Uthaiyashankar
            eddiehsu Eddie Hsu
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: