src/core/transport/tcp/axis2_tcp_server.h
@@ -41,13 +41,13 @@ extern "C"
 {
 #endif
 
-    axis2_transport_receiver_t *AXIS2_CALL
+    AXIS2_EXTERN axis2_transport_receiver_t *AXIS2_CALL
     axis2_tcp_server_create(
         const axutil_env_t * env,
         const axis2_char_t * repo,
         const int port);
 
-    axis2_status_t AXIS2_CALL
+    AXIS2_EXTERN axis2_status_t AXIS2_CALL
     axis2_tcp_server_stop(
         axis2_transport_receiver_t * server,
         const axutil_env_t * env);
