src/core/transport/tcp/receiver/tcp_receiver.c
@@ -87,7 +87,7 @@ static const axis2_transport_receiver_ops_t tcp_transport_receiver_ops_var = {
     axis2_tcp_server_free
 };
 
-axis2_transport_receiver_t *AXIS2_CALL
+AXIS2_EXTERN axis2_transport_receiver_t *AXIS2_CALL
 axis2_tcp_server_create(
     const axutil_env_t * env,
     const axis2_char_t * repo,
@@ -222,7 +222,7 @@ axis2_tcp_server_start(
     return AXIS2_SUCCESS;
 }
 
-axis2_status_t AXIS2_CALL
+AXIS2_EXTERN axis2_status_t AXIS2_CALL
 axis2_tcp_server_stop(
     axis2_transport_receiver_t * server,
     const axutil_env_t * env)
